feat: added docs for adhoc marimo exploration approach

--- a/nvm-uv/.envrc.example
+++ b/nvm-uv/.envrc.example
@@ -8,5 +8,4 @@ source .venv/bin/activate
 dotenv
 
 # Set shared defaults (can be overridden by .env)
-export NODE_ENV=${NODE_ENV:-development}
-export PYTHONUNBUFFERED=1
+# export PYTHONPATH="$PWD/src:$PYTHONPATH"
